Update: FE my course, my class